--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		/>
 
 		<!-- External CSS -->
-		<link rel="stylesheet" href="./src/style.css" />
+		<link rel="stylesheet" href="./src/css/Grid_Sys.css" />
+		<link rel="stylesheet" href="./src/css/style.css" />
 		<title>Music Player</title>
 	</head>
 	<body>
@@ -23,12 +24,12 @@
 			<h1>Music Player</h1>
 			<div class="dashboard">
 				<div class="cd"></div>
+				<div class="control"></div>
 			</div>
-			<div class="control"></div>
 			<div class="playlist"></div>
 		</div>
 
 		<!-- External JS -->
-		<script src="./src/script.js"></script>
+		<script src="./src/js/script.js"></script>
 	</body>
 </html>
