--- a/index.html
+++ b/index.html
@@ -20,14 +20,58 @@
 		<title>Music Player</title>
 	</head>
 	<body>
-		<div class="player">
-			<h1>Music Player</h1>
-			<div class="dashboard">
-				<div class="cd"></div>
-				<div class="control"></div>
+		<div class="main-container">
+			<div class="top-bar">
+				<div class="nav-bar"></div>
+				<div class="search-bar"></div>
+				<div class="tool-bar"></div>
 			</div>
-			<div class="playlist"></div>
+			<div class="category-sidebar">
+				<div class="title"></div>
+				<div class="widge"></div>
+				<div class="music-options"></div>
+				<div class="create-new-playlist"></div>
+			</div>
+			<div class="playlist-sidebar">
+				<div class="top-bar"></div>
+				<div class="now-play"></div>
+				<div class="next-play"></div>
+			</div>
+			<div class="main-content">
+				<div class="banner"></div>
+				<div class="nav-bar">
+					<ul>
+						<li><a href="#">Item 1</a></li>
+						<li><a href="#">Item 2</a></li>
+						<li><a href="#">Item 3</a></li>
+						<li><a href="#">Item 4</a></li>
+						<li><a href="#">Item 5</a></li>
+					</ul>
+				</div>
+				<section class="item1">
+					<div class="title"></div>
+					<div class="content"></div>
+				</section>
+				<section class="item2">
+					<div class="title"></div>
+					<div class="content"></div>
+				</section>
+				<section class="item3">
+					<div class="title"></div>
+					<div class="content"></div>
+				</section>
+				<section class="item4">
+					<div class="title"></div>
+					<div class="content"></div>
+				</section>
+				<section class="item5">
+					<div class="title"></div>
+					<div class="content"></div>
+				</section>
+			</div>
 		</div>
+		<div class="song-info"></div>
+
 		<!-- External JS -->
 		<script src="./src/js/script.js"></script>
 	</body>
