--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
 					<div class="artist">Unknown Artist</div>
 				</div>
 				<div class="media-option">
-					<i class="fas fa-heart ico--click"></i>
-					<i class="fas fa-ellipsis-h"></i>
+					<i class="fas fa-heart ico ico--click"></i>
+					<i class="fas fa-ellipsis-h ico"></i>
 				</div>
 			</div>
 			<div class="controller">
 				<div class="part1">
-					<i class="fas fa-random ico--click"></i>
-					<i class="fas fa-backward ico--click"></i>
-					<i class="fas fa-play ico--click"></i>
-					<i class="fas fa-forward ico--click"></i>
-					<i class="fas fa-redo-alt ico--click"></i>
+					<i class="fas fa-random ico ico--click"></i>
+					<i class="fas fa-backward ico ico--click"></i>
+					<i class="fas fa-play ico ico--click"></i>
+					<i class="fas fa-forward ico ico--click"></i>
+					<i class="fas fa-redo-alt ico ico--click"></i>
 				</div>
 				<div class="part2">
 					<div class="left-time">00:00</div>
@@ -111,11 +111,11 @@
 				</div>
 			</div>
 			<div class="player-tools">
-				<i class="fas fa-microphone"></i>
-				<i class="fas fa-volume-up"></i>
-				<i class="fas fa-volume-mute ico--hide"></i>
-				<i class="fas fa-grip-lines-vertical"></i>
-				<i class="fas fa-stream"></i>
+				<i class="fas fa-microphone ico"></i>
+				<i class="fas fa-volume-up ico"></i>
+				<i class="fas fa-volume-mute ico ico--hide"></i>
+				<i class="fas fa-grip-lines-vertical ico"></i>
+				<i class="fas fa-stream ico"></i>
 			</div>
 		</div>
 
