--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 		<!-- External CSS -->
 		<link rel="stylesheet" href="./src/css/Grid_Sys.css" />
 		<link rel="stylesheet" href="./src/css/style.css" />
+		<link rel="stylesheet" href="./src/css/theme.css" />
+		<link rel="stylesheet" href="./src/css/player_control.css" />
 		<title>Music Player</title>
 	</head>
-	<body>
+	<body class="green-theme">
 		<div class="main-container">
 			<div class="top-bar">
 				<div class="nav-bar"></div>
@@ -114,7 +116,7 @@
 				<i class="fas fa-microphone ico"></i>
 				<i class="fas fa-volume-up ico"></i>
 				<i class="fas fa-volume-mute ico ico--hide"></i>
-				<i class="fas fa-grip-lines-vertical ico"></i>
+				<div class="vertical-line"></div>
 				<i class="fas fa-stream ico"></i>
 			</div>
 		</div>
