--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@
 					<img class="logo" src="./src/img/Logo.png" alt="Logo" />
 					<div class="app-name">My Player</div>
 				</div>
-				<div class="all-folder"></div>
+				<div class="menu">
+					<div class="menu-item">
+						<a href="#"><i class="fas fa-folder"></i> Personal</a>
+					</div>
+					<div class="menu-item">
+						<a href="#"><i class="fas fa-folder"></i> Discover</a>
+					</div>
+					<div class="menu-item">
+						<a href="#"><i class="fas fa-folder"></i> Ranking</a>
+					</div>
+					<div class="menu-item">
+						<a href="#"><i class="fas fa-folder"></i> Radio</a>
+					</div>
+					<div class="menu-item">
+						<a href="#"><i class="fas fa-folder"></i> Following</a>
+					</div>
+				</div>
+				<div class="horizone-line"></div>
 				<div class="music-options"></div>
 				<div class="create-new-playlist"></div>
 			</div>
