--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="./src/img/Logo.png" />
-
 		<!-- GG Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,21 +11,19 @@
 			href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap"
 			rel="stylesheet"
 		/>
-
 		<!-- Font Awesome -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
 		/>
-
 		<!-- Box Icon -->
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
-
 		<!-- External CSS -->
 		<!-- <link rel="stylesheet" href="./src/css/Grid_Sys.css" /> -->
+		<link rel="stylesheet" href="./src/css/reset.css" />
 		<link rel="stylesheet" href="./src/css/style.css" />
 		<link rel="stylesheet" href="./src/css/theme.css" />
 		<link rel="stylesheet" href="./src/css/main_content.css" />
@@ -43,23 +40,40 @@
 					<img class="logo" src="./src/img/Logo.png" alt="Logo" />
 					<div class="app-name">My Player</div>
 				</div>
-				<div class="menu">
-					<div class="menu-item">
-						<a href="#"><i class="fas fa-folder"></i> Personal</a>
-					</div>
-					<div class="menu-item">
-						<a href="#"><i class="fas fa-folder"></i> Discover</a>
-					</div>
-					<div class="menu-item">
-						<a href="#"><i class="fas fa-folder"></i> Ranking</a>
-					</div>
-					<div class="menu-item">
-						<a href="#"><i class="fas fa-folder"></i> Radio</a>
-					</div>
-					<div class="menu-item">
-						<a href="#"><i class="fas fa-folder"></i> Following</a>
-					</div>
-				</div>
+				<nav class="menu">
+					<ul class="menu-list">
+						<li class="menu-item">
+							<a href="#">
+								<i class="fas fa-folder"></i>
+								<span> Personal</span>
+							</a>
+						</li>
+						<li class="menu-item">
+							<a href="#">
+								<i class="fas fa-folder"></i>
+								<span> Discover</span>
+							</a>
+						</li>
+						<li class="menu-item">
+							<a href="#">
+								<i class="fas fa-folder"></i>
+								<span> Ranking</span>
+							</a>
+						</li>
+						<li class="menu-item">
+							<a href="#">
+								<i class="fas fa-folder"></i>
+								<span> Radio</span>
+							</a>
+						</li>
+						<li class="menu-item">
+							<a href="#">
+								<i class="fas fa-folder"></i>
+								<span> Following</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
 				<div class="horizone-line"></div>
 				<div class="music-options"></div>
 				<div class="create-new-playlist"></div>
