--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				<nav class="menu">
 					<ul class="menu-list">
-						<li class="menu-item">
+						<li class="menu-item active">
 							<a href="#">
 								<i class="fas fa-folder"></i>
 								<span> Personal</span>
@@ -89,11 +89,11 @@
 					<div class="banner"></div>
 					<div class="nav-bar">
 						<ul class="nav-links">
-							<li class="link"><a href="#">Item 1</a></li>
-							<li class="link"><a href="#">Item 2</a></li>
-							<li class="link"><a href="#">Item 3</a></li>
-							<li class="link"><a href="#">Item 4</a></li>
-							<li class="link"><a href="#">Item 5</a></li>
+							<li class="link"><a href="#">Playlist</a></li>
+							<li class="link"><a href="#">Song</a></li>
+							<li class="link"><a href="#">List</a></li>
+							<li class="link"><a href="#">Hello</a></li>
+							<li class="link"><a href="#">Your Playlist</a></li>
 						</ul>
 					</div>
 					<section class="item item1">
@@ -161,5 +161,6 @@
 		</div>
 		<!-- External JS -->
 		<script src="./src/js/script.js"></script>
+		<script></script>
 	</body>
 </html>
