--- a/index.html
+++ b/index.html
@@ -153,16 +153,32 @@
 					</div>
 				</div>
 			</div>
-			<div class="header">
-				<div class="nav-btn"></div>
-				<div class="search-bar"></div>
-				<div class="tool-bar"></div>
-			</div>
 			<div class="main-content">
 				<div class="top-bar">
-					<div class="nav-bar"></div>
-					<div class="search-bar"></div>
-					<div class="tool-bar"></div>
+					<div class="nav-bar">
+						<i class="fa-2x fas fa-chevron-left"></i>
+						<i class="fa-2x fas fa-chevron-right"></i>
+					</div>
+					<div class="search-bar">
+						<input
+							type="text"
+							name="search"
+							id="search"
+							placeholder="Type name of artist, song, ..."
+						/>
+					</div>
+					<div class="tool-bar">
+						<i class="fa-2x fab fa-ethereum"></i>
+						<i class="fa-2x fas fa-cog"></i>
+						<i class="fa-2x fas fa-upload"></i>
+						<i>
+							<img
+								class="ava-img"
+								src="./src/img/Logo.png"
+								alt="Avatar"
+							/>
+						</i>
+					</div>
 				</div>
 
 				<div class="content">
