--- a/index.html
+++ b/index.html
@@ -155,29 +155,68 @@
 			</div>
 			<div class="main-content">
 				<div class="top-bar">
-					<div class="nav-bar">
-						<i class="fa-2x fas fa-chevron-left"></i>
-						<i class="fa-2x fas fa-chevron-right"></i>
-					</div>
-					<div class="search-bar">
-						<input
-							type="text"
-							name="search"
-							id="search"
-							placeholder="Type name of artist, song, ..."
-						/>
-					</div>
-					<div class="tool-bar">
-						<i class="fa-2x fab fa-ethereum"></i>
-						<i class="fa-2x fas fa-cog"></i>
-						<i class="fa-2x fas fa-upload"></i>
-						<i>
-							<img
-								class="ava-img"
-								src="./src/img/Logo.png"
-								alt="Avatar"
-							/>
-						</i>
+					<div class="parts">
+						<div class="part1">
+							<i
+								style="width: 44px"
+								class="fas fa-chevron-left top-ico ico--click"
+							></i>
+							<i
+								style="width: 44px"
+								class="fas fa-chevron-right top-ico ico--click"
+							></i>
+							<div class="search-bar">
+								<input
+									type="text"
+									name="search"
+									id="search"
+									placeholder="Type name of artist, song, ..."
+								/>
+								<ul class="suggest-list">
+									<div class="content">
+										<div class="title">Suggest for You</div>
+										<li class="suggest-item">
+											Suggest Item 1
+										</li>
+										<li class="suggest-item">
+											Suggest Item 2
+										</li>
+										<li class="suggest-item">
+											Suggest Item 3
+										</li>
+										<li class="suggest-item">
+											Suggest Item 4
+										</li>
+										<li class="suggest-item">
+											Suggest Item 5
+										</li>
+										<li class="suggest-item">
+											Suggest Item 6
+										</li>
+										<li class="suggest-item">
+											Suggest Item 7
+										</li>
+										<li class="suggest-item">
+											Suggest Item 8
+										</li>
+									</div>
+								</ul>
+							</div>
+						</div>
+						<div class="part2">
+							<div class="tool-bar">
+								<i
+									class="fab fa-ethereum top-ico ico--click"
+								></i>
+								<i class="fas fa-cog top-ico ico--click"></i>
+								<i class="fas fa-upload top-ico ico--click"></i>
+								<img
+									class="ava-img"
+									src="./src/img/Logo.png"
+									alt="Avatar"
+								/>
+							</div>
+						</div>
 					</div>
 				</div>
 
