--- a/index.html
+++ b/index.html
@@ -176,40 +176,54 @@
 									<div class="content">
 										<div class="title">Suggest for You</div>
 										<li class="suggest-item">
-											Suggest Item 1
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 1</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 2
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 2</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 3
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 3</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 4
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 4</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 5
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 5</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 6
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 6</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 7
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 7</span>
 										</li>
 										<li class="suggest-item">
-											Suggest Item 8
+											<i class="fas fa-chart-line"></i>
+											<span> Suggest Item 8</span>
 										</li>
 									</div>
 								</ul>
 							</div>
 						</div>
 						<div class="part2">
-							<div class="tool-bar">
+							<div class="item">
 								<i
 									class="fab fa-ethereum top-ico ico--click"
 								></i>
+							</div>
+							<div class="item">
 								<i class="fas fa-cog top-ico ico--click"></i>
+							</div>
+							<div class="item">
 								<i class="fas fa-upload top-ico ico--click"></i>
+							</div>
+							<div class="item">
 								<img
 									class="ava-img"
 									src="./src/img/Logo.png"
@@ -219,38 +233,41 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="content">
-					<div class="banner"></div>
+					<div class="banner">
+						<img src="./src/img/Logo.png" alt="Avatar" />
+						<div class="info">Yuran</div>
+					</div>
 					<div class="nav-bar">
 						<ul class="nav-links">
-							<li class="link"><a href="#">Playlist</a></li>
-							<li class="link"><a href="#">Song</a></li>
-							<li class="link"><a href="#">List</a></li>
-							<li class="link"><a href="#">Hello</a></li>
-							<li class="link"><a href="#">Your Playlist</a></li>
+							<li class="link liactive">
+								<a href="#summary">Summary</a>
+							</li>
+							<li class="link"><a href="#songs">Songs</a></li>
+							<li class="link">
+								<a href="#playlist">Playlist</a>
+							</li>
+							<li class="link"><a href="#artist">Artist</a></li>
 						</ul>
 					</div>
-					<section class="item item1">
-						<div class="title"></div>
-						<div class="content"></div>
-					</section>
-					<section class="item item2">
-						<div class="title"></div>
-						<div class="content"></div>
-					</section>
-					<section class="item item3">
-						<div class="title"></div>
-						<div class="content"></div>
-					</section>
-					<section class="item item4">
-						<div class="title"></div>
-						<div class="content"></div>
-					</section>
-					<section class="item item5">
-						<div class="title"></div>
-						<div class="content"></div>
-					</section>
+					<div class="main-page">
+						<section id="summary" class="item item1">
+							<div class="title">Summary</div>
+							<div class="content"></div>
+						</section>
+						<section id="songs" class="item item2">
+							<div class="title">Songs</div>
+							<div class="content"></div>
+						</section>
+						<section id="playlist" class="item item3">
+							<div class="title">Playlist</div>
+							<div class="content"></div>
+						</section>
+						<section id="artist" class="item item4">
+							<div class="title">Artist</div>
+							<div class="content"></div>
+						</section>
+					</div>
 				</div>
 			</div>
 			<div class="playlist-sidebar">
