--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 			href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap"
 			rel="stylesheet"
 		/>
-		<!-- Font Awesome -->
+		<!-- Icon -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
 		/>
-		<!-- Box Icon -->
 		<link
 			href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
 		<!-- External CSS -->
-		<!-- <link rel="stylesheet" href="./src/css/Grid_Sys.css" /> -->
 		<link rel="stylesheet" href="./src/css/reset.css" />
 		<link rel="stylesheet" href="./src/css/style.css" />
 		<link rel="stylesheet" href="./src/css/theme.css" />
@@ -154,7 +152,7 @@
 				</div>
 			</div>
 			<div class="main-content">
-				<div class="top-bar">
+				<div id="top" class="top-bar">
 					<div class="parts">
 						<div class="part1">
 							<i
@@ -269,6 +267,11 @@
 						</section>
 					</div>
 				</div>
+				<div class="to-top">
+					<span class="content">
+						<a href="#top">Top</a>
+					</span>
+				</div>
 			</div>
 			<div class="playlist-sidebar">
 				<div class="top-bar"></div>
@@ -311,7 +314,6 @@
 				<i class="fas fa-stream ico ico--click"></i>
 			</div>
 		</div>
-		<!-- External JS -->
 		<script src="./src/js/script.js"></script>
 		<script></script>
 	</body>
