--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
-					<img class="logo" src="./src/img/Logo.png" alt="Logo" />
-					<div class="app-name">
-						<a href="#">YR Player</a>
-					</div>
+					<a href="#">
+						<img class="logo" src="./src/img/Logo.png" alt="Logo" />
+						<div class="app-name">YR Player</div>
+					</a>
 				</div>
 				<nav class="menu">
 					<ul class="list menu-list">
@@ -255,7 +255,28 @@
 						</section>
 						<section id="songs" class="item item2">
 							<div class="title">Songs</div>
-							<div class="content"></div>
+							<div class="content">
+								<div class="slider"></div>
+								<div class="song-list">
+									<ul>
+										<li>
+											<div class="song-item">Item1</div>
+										</li>
+										<li>
+											<div class="song-item">Item2</div>
+										</li>
+										<li>
+											<div class="song-item">Item3</div>
+										</li>
+										<li>
+											<div class="song-item">Item4</div>
+										</li>
+										<li>
+											<div class="song-item">Item5</div>
+										</li>
+									</ul>
+								</div>
+							</div>
 						</section>
 						<section id="playlist" class="item item3">
 							<div class="title">Playlist</div>
