--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 					<div class="main-page">
 						<section id="summary" class="item item1">
 							<div class="title">Summary</div>
-							<div class="content"></div>
+							<div class="section-content"></div>
 						</section>
 						<section id="songs" class="item item2">
 							<div class="title">Songs</div>
-							<div class="content">
+							<div class="section-content">
 								<div class="slider"></div>
 								<div class="song-list">
 									<ul>
@@ -280,11 +280,11 @@
 						</section>
 						<section id="playlist" class="item item3">
 							<div class="title">Playlist</div>
-							<div class="content"></div>
+							<div class="section-content"></div>
 						</section>
 						<section id="artist" class="item item4">
 							<div class="title">Artist</div>
-							<div class="content"></div>
+							<div class="section-content"></div>
 						</section>
 					</div>
 				</div>
