--- a/index.html
+++ b/index.html
@@ -249,43 +249,53 @@
 						</ul>
 					</div>
 					<div class="main-page">
-						<section id="summary" class="item item1">
-							<div class="title">Summary</div>
-							<div class="section-content"></div>
-						</section>
-						<section id="songs" class="item item2">
-							<div class="title">Songs</div>
-							<div class="section-content">
-								<div class="slider"></div>
-								<div class="song-list">
-									<ul>
-										<li>
-											<div class="song-item">Item1</div>
-										</li>
-										<li>
-											<div class="song-item">Item2</div>
-										</li>
-										<li>
-											<div class="song-item">Item3</div>
-										</li>
-										<li>
-											<div class="song-item">Item4</div>
-										</li>
-										<li>
-											<div class="song-item">Item5</div>
-										</li>
-									</ul>
+						<!-- Summary -->
+						<div id="summary" class="item item1">
+							<section id="summary-songs" class="item item2">
+								<div class="title">
+									<span> Songs </span>
+									<div class="title-left">
+										<div class="upload-song">
+											<i class="fas fa-upload"></i>
+											<span>Upload</span>
+										</div>
+										<div class="play-all">
+											<i class="fas fa-play"></i>
+											<span>Play All</span>
+										</div>
+									</div>
 								</div>
-							</div>
-						</section>
-						<section id="playlist" class="item item3">
-							<div class="title">Playlist</div>
-							<div class="section-content"></div>
-						</section>
-						<section id="artist" class="item item4">
-							<div class="title">Artist</div>
-							<div class="section-content"></div>
-						</section>
+								<div class="section-content">
+									<div class="img-preview">
+										<img
+											src="./src/img/EdSheeran.png"
+											alt="Shape Of You"
+										/>
+										<img
+											src="./src/img/SummerTime.png"
+											alt="Summer Time"
+										/>
+										<img
+											src="./src/img/SavageLove.png"
+											alt="Savage Love"
+										/>
+										<img
+											src="./src/img/Nevada.png"
+											alt="Nevada"
+										/>
+									</div>
+									<div class="song-list"></div>
+								</div>
+							</section>
+							<section id="summary-playlist" class="item item3">
+								<div class="title">Playlist</div>
+								<div class="section-content"></div>
+							</section>
+							<section id="summary-artist" class="item item4">
+								<div class="title">Artist</div>
+								<div class="section-content"></div>
+							</section>
+						</div>
 					</div>
 				</div>
 				<div class="to-top">
