--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<link rel="stylesheet" href="./src/css/responsive.css" />
 		<title>YR Player</title>
 	</head>
-	<body class="green-theme">
+	<body theme="green">
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
@@ -253,7 +253,9 @@
 						<div id="summary" class="item item1">
 							<section id="summary-songs" class="item item2">
 								<div class="title">
-									<span> Songs </span>
+									<span>
+										<a href="#songs"> Songs </a>
+									</span>
 									<div class="title-left">
 										<div class="upload-song">
 											<i class="fas fa-upload"></i>
@@ -283,8 +285,14 @@
 											src="./src/img/Nevada.png"
 											alt="Nevada"
 										/>
+										<img
+											src="./src/img/ModernTalking.png"
+											alt="Cheri Cheri Lady"
+										/>
 									</div>
-									<div class="song-list"></div>
+									<div class="song-list">
+										<ul style="width: 100%"></ul>
+									</div>
 								</div>
 							</section>
 							<section id="summary-playlist" class="item item3">
