--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<link rel="stylesheet" href="./src/css/responsive.css" />
 		<title>YR Player</title>
 	</head>
-	<body theme="green">
+	<body theme="dark">
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
