--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
 						<li class="item menu-item active">
 							<a href="#">
 								<i class="fas fa-folder"></i>
-								<span> Personal</span>
+								Personal
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="fas fa-folder"></i>
-								<span> Discover</span>
+								Discover
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="fas fa-folder"></i>
-								<span> Ranking</span>
+								Ranking
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="fas fa-folder"></i>
-								<span> Radio</span>
+								Radio
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="fas fa-folder"></i>
-								<span> Following</span>
+								Following
 							</a>
 						</li>
 					</ul>
@@ -81,43 +81,45 @@
 							<li class="item option-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> New Release</span>
+									New Release
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> Kind</span>
+									Kind
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> Top 100</span>
+									Top 100
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> MV</span>
+									MV
 								</a>
 							</li>
 						</ul>
 						<div class="ad-banner">
 							Disable Ads and Listen Premium Songs
 							<a class="ad-link" href="#">Go Premium</a>
+
+							<div class="ad-modal"></div>
 						</div>
 						<ul class="list library-list">
 							<li class="item library-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> Songs</span>
+									Songs
 								</a>
 							</li>
 							<li class="item library-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									<span> Playlist</span>
+									Playlist
 								</a>
 							</li>
 						</ul>
