--- a/index.html
+++ b/index.html
@@ -299,7 +299,15 @@
 							</section>
 							<section id="summary-playlist" class="item item3">
 								<div class="title">Playlist</div>
-								<div class="section-content"></div>
+								<div class="section-content">
+									<div class="new-playlist">
+										<div class="create-btn"></div>
+										<div class="title">
+											Create New Playlist
+										</div>
+									</div>
+									<div class="playlist-slider"></div>
+								</div>
 							</section>
 							<section id="summary-artist" class="item item4">
 								<div class="title">Artist</div>
