--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
 		<title>YR Player</title>
 	</head>
 	<body theme="dark">
+		<div class="ad-modal">
+			<div class="ad-banner">
+				<div class="ad-banner__content">
+					<img src="./src/img/Logo.png" alt="Logo" />
+					<div>Have Fun With my Music Player !!!</div>
+				</div>
+				<a class="ad-link" href="#">
+					<i class="fas fa-crown"></i>
+					Go Premium
+				</a>
+			</div>
+		</div>
+
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
@@ -108,8 +121,6 @@
 						<div class="ad-banner">
 							Disable Ads and Listen Premium Songs
 							<a class="ad-link" href="#">Go Premium</a>
-
-							<div class="ad-modal"></div>
 						</div>
 						<ul class="list library-list">
 							<li class="item library-item">
