--- a/index.html
+++ b/index.html
@@ -41,8 +41,28 @@
 				</div>
 				<a class="ad-link" href="#">
 					<i class="fas fa-crown"></i>
-					Go Premium
+					<span> Go Premium </span>
 				</a>
+			</div>
+		</div>
+
+		<div class="new-pl-modal">
+			<div class="new-pl-banner__overlay"></div>
+			<div class="new-pl-banner">
+				<div class="new-pl-banner__content">
+					<div>
+						<span> Playlist Name </span>
+						<input type="text" placeholder="Type Playlist Name" />
+					</div>
+					<div>
+						<span> Owner </span>
+						<input type="text" placeholder="Type Owner Name" />
+					</div>
+					<a class="new-pl-link" href="#">
+						<i class="far fa-plus-square"></i>
+						<span> Create Playlist </span>
+					</a>
+				</div>
 			</div>
 		</div>
 
@@ -59,31 +79,31 @@
 						<li class="item menu-item active">
 							<a href="#">
 								<i class="bi bi-music-player"></i>
-								Personal
+								<span> Personal </span>
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="bi bi-vinyl"></i>
-								Discover
+								<span> Discover </span>
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="bi bi-graph-up"></i>
-								Ranking
+								<span> Ranking </span>
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="bi bi-soundwave"></i>
-								Radio
+								<span> Radio </span>
 							</a>
 						</li>
 						<li class="item menu-item">
 							<a href="#">
 								<i class="bi bi-file-post"></i>
-								Following
+								<span> Following </span>
 							</a>
 						</li>
 					</ul>
@@ -95,25 +115,25 @@
 							<li class="item option-item">
 								<a href="#">
 									<i class="bi bi-music-note-beamed"></i>
-									New Release
+									<span> New Release </span>
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="bi bi-slack"></i>
-									Kind
+									<span> Kind </span>
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="bi bi-star"></i>
-									Top 100
+									<span> Top 100 </span>
 								</a>
 							</li>
 							<li class="item option-item">
 								<a href="#">
 									<i class="fas fa-folder"></i>
-									MV
+									<span> MV </span>
 								</a>
 							</li>
 						</ul>
@@ -125,7 +145,7 @@
 							<li class="item library-item">
 								<a href="#">
 									<i class="bi bi-vinyl-fill"></i>
-									Songs
+									<span> Songs </span>
 								</a>
 							</li>
 							<li class="item library-item">
@@ -133,7 +153,7 @@
 									<i
 										class="bi bi-file-earmark-music-fill"
 									></i>
-									Playlist
+									<span> Playlist </span>
 								</a>
 							</li>
 						</ul>
@@ -392,6 +412,5 @@
 			</div>
 		</div>
 		<script src="./src/js/script.js"></script>
-		<script></script>
 	</body>
 </html>
