--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	</head>
 	<body theme="dark">
 		<div class="ad-modal">
-			<div class="ad-banner">
-				<div class="ad-banner__content">
+			<div class="adbanner">
+				<div class="adbanner__content">
 					<img src="./src/img/Logo.png" alt="Logo" />
 					<div>Have Fun With my Music Player !!!</div>
 				</div>
@@ -136,7 +136,7 @@
 								</a>
 							</li>
 						</ul>
-						<div class="ad-banner">
+						<div class="adbanner">
 							Disable Ads and Listen Premium Songs
 							<a class="ad-link" href="#">Go Premium</a>
 						</div>
