Fixed Ad Banner Model

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 	</head>
 	<body theme="dark">
 		<div class="ad-modal">
-			<div class="adbanner">
-				<div class="adbanner__content">
+			<div class="banner-modal-ad">
+				<div class="banner-modal-ad__content">
 					<img src="./src/img/Logo.png" alt="Logo" />
 					<div>Have Fun With my Music Player !!!</div>
 				</div>
-				<a class="ad-link" href="#">
+				<a class="banner-modal-ad-link" href="#">
 					<i class="fas fa-crown"></i>
 					<span> Go Premium </span>
 				</a>
@@ -136,9 +136,11 @@
 								</a>
 							</li>
 						</ul>
-						<div class="adbanner">
+						<div class="banner-modal-ad">
 							Disable Ads and Listen Premium Songs
-							<a class="ad-link" href="#">Go Premium</a>
+							<a class="banner-modal-ad-link" href="#"
+								>Go Premium</a
+							>
 						</div>
 						<ul class="list library-list">
 							<li class="item library-item">
