--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
 					<div class="parts">
 						<div class="part1">
 							<i class="bi bi-arrow-left top-ico ico--click"></i>
-							<i
-								class="bi bi-arrow-right top-ico ico--clickt"
-							></i>
+							<i class="bi bi-arrow-right top-ico ico--click"></i>
 							<div class="search-bar">
 								<input
 									type="text"
